<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">
    <fragment
        android:id="@+id/navigation_home"
        android:name="com.duma.dicodingevent.ui.home.HomeFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_finished"
        android:name="com.duma.dicodingevent.ui.finishedEvent.FinishedEventFragment"
        android:label="@string/finished_title"
        tools:layout="@layout/fragment_finished_event" />

    <fragment
        android:id="@+id/navigation_upcoming"
        android:name="com.duma.dicodingevent.ui.upcomingEvent.UpcomingEventFragment"
        android:label="@string/upcoming_title"
        tools:layout="@layout/fragment_upcoming_event" />
    <fragment
        android:id="@+id/navigation_favorite"
        android:name="com.duma.dicodingevent.ui.favoriteEvent.ui.FavoriteEventFragment"
        android:label="@string/favorite_title"
        tools:layout="@layout/fragment_favorite_event" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.duma.dicodingevent.ui.setting.SettingFragment"
        android:label="@string/setting_title"
        tools:layout="@layout/fragment_setting"/>

</navigation>