<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageViewEvent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/event_poster"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_margin="16dp"
                app:backgroundTint="@color/purple_200"
                app:fabSize="normal"
                app:srcCompat="@drawable/ic_unfavorite"
                app:tint="@color/white"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />
        </FrameLayout>

        <TextView
            android:id="@+id/tvName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/nama_event"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvOwnerName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama_owner"
            android:textSize="16sp"
            android:textStyle="italic"
            android:textAlignment="center"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:gravity="center">

            <TableRow
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remaining_quota"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_point"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvRemainingQuota"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quota_example"
                    android:textSize="14sp"
                    android:textStyle="bold"/>


            </TableRow>

            <TableRow
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/waktu_pelaksanaan"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_point"
                    android:textSize="14sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tvTimeBegin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/begin_time"
                    android:textSize="14sp"
                    android:textStyle="bold"/>
            </TableRow>
        </TableLayout>

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/deskripsi_event"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginHorizontal="8dp"
            android:text="@string/btn_register"
            android:textSize="16sp"
            android:gravity="center"
            tools:ignore="VisualLintButtonSize" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:visibility="gone" />
    </LinearLayout>
</ScrollView>
